<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.pay2who.p2wapp.SignupFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/txtemail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtemail"
            android:inputType="text" />

        <TextView
            android:id="@+id/txtpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:text="@string/Password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtpassword"
            android:inputType="textPassword" />


        <TextView
            android:id="@+id/txtfirstname"
            android:layout_width="fill_parent"
            android:layout_below="@+id/password"
            android:layout_height="wrap_content"
            android:text="@string/Firstname" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtfirstname"
            android:inputType="text" />

        <TextView
            android:id="@+id/txtlastname"
            android:layout_width="fill_parent"
            android:layout_below="@+id/firstname"
            android:layout_height="wrap_content"
            android:text="@string/Lastname" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtlastname"
            android:inputType="text" />


        <Button
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastname"
            android:text="@string/SignupBtn" />

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup"
            android:text="@string/LoginBtn" />

    </RelativeLayout>

</FrameLayout>
